--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     playsinline 
     webkit-playsinline 
     controls 
-    src="BEA PAISA.mp4">
+    src="BEA_PAISA.mp4">
   </video>
 
 </body>
